--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy_ecs = "0.12.1"
+bevy_ecs = ">= 0.12.1"
 gl = "0.14.0"
-glfw = "0.54.0"
+glfw = ">= 0.54.0"
 glm = "0.2.3"
 image = "0.24.9"
 term = "0.7.0"
