--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -10,6 +10,8 @@ bevy_ecs = ">= 0.15.3"
 gl = ">= 0.14.0"
 glfw = ">= 0.59.0"
 glm = ">= 0.2.3"
-image = ">= 0.25.5"
+image = ">= 0.25.6"
 term = ">= 1.0.1"
-rand = "0.4.6"
+rand = ">= 0.9.0"
+bit-set = "0.8.0"
+
