--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -3,9 +3,14 @@ name = "afraid_of_dark"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = ["opengl"]
+opengl = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+assets = { path = "src/engine/assets" }
 bevy_ecs = ">= 0.15.3"
 gl = ">= 0.14.0"
 glfw = ">= 0.59.0"
@@ -14,4 +19,3 @@ image = ">= 0.25.6"
 term = ">= 1.0.1"
 rand = ">= 0.9.0"
 bit-set = "0.8.0"
-
